--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 requests>=2.31.0
-beautifulsoup4>=4.12.0
-playwright>=1.40.0
-tqdm>=4.66.0
 pyrogram
 tgcrypto
 python-dotenv
 ffmpeg-python
+myjdapi
+beautifulsoup4
